--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,11 @@
     "rules": {
       "@typescript-eslint/explicit-function-return-type": "off"
     }
+  }, {
+    "files": ["docs/**"],
+    "rules": {
+      "import/no-unresolved": "off"
+    }
   }],
   "rules": {
     "@typescript-eslint/indent": ["error", 2],
