--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
   }, {
     "files": ["docs/**"],
     "rules": {
+      "import/extensions": "off",
       "import/no-unresolved": "off"
     }
   }],
